# alignment

./: .clang-format  .gitignore  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/libalign/: CMakeLists.txt
src/libalign/include/align/: align.h  common.h  gatoh.h  needleman.h
src/libalign/src/: lib.cpp
